--- a/packages/recomponents/src/components/r-tabs/r-tabs.scss
+++ b/packages/recomponents/src/components/r-tabs/r-tabs.scss
@@ -9,83 +9,63 @@
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
 }
 
 .tab-divided {
-    border-bottom: 1px solid #E1E7EA;
+    border-bottom: 1px solid var(--tab-divided-border-bottom-color);
 }
 
 .tab-item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
-    -webkit-box-flex: 0 0 auto;
-    -webkit-flex: 0 0 auto;
-    -ms-flex: 0 0 auto;
     flex: 0 0 auto;
 }
 
 .tab.tab-fluid .tab-item {
-    -webkit-box-flex: 1 0 auto;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
     flex: 1 0 auto;
 }
 
 .tab-item .tab-link {
     line-height: 1;
     position: relative;
-    color: #6B7384;
+    color: var(--tab-link-color);
     border-bottom: 3px solid transparent;
-    padding: 16px 0;
-    padding: 1.6rem 0;
-    margin: 0 8px;
-    margin: 0 0.8rem;
+    padding: var(--tab-link-padding);
+    margin: var(--tab-link-margin);
     cursor: pointer;
-    -webkit-transition: all 0.1s ease;
-    -moz-transition: all 0.1s ease;
-    -ms-transition: all 0.1s ease;
-    -o-transition: all 0.1s ease;
-    transition: all 0.1s ease;
+    transition: var(--tab-link-transition);
     text-decoration: none;
 }
 
 .tab-item .tab-link:hover {
     text-decoration: none;
-    color: #0D2B3E;
-    border-bottom: 3px solid #A1B2C1;
+    color: var(--tab-link-hover-color);
+    border-bottom: 3px solid var(--tab-link-hover-border-bottom-color);
 }
 
 .tab-item .tab-link.is-active {
-    color: #0044D4;
-    border-bottom: 3px solid #0044D4;
+    color: var(--tab-link-active-color);
+    border-bottom: 3px solid var(--tab-link-active-border-bottom-color);
 }
 
 .tab-item .tab-link.has-error {
-    color: #E53935;
+    color: var(--tab-link-error-color);
 }
 
 .tab-item .tab-link.is-active.has-error {
-    border-bottom: 3px solid #E53935;
+    border-bottom: 3px solid var(--tab-link-error-border-bottom-color);
 }
 
 .tab-item:first-child .tab-link {
-    margin-left: 16px;
-    margin-left: 1.6rem;
+    margin-left: var(--tab-link-first-margin-left);
 }
 
 .tab-content {
-    padding: 20px;
-    padding: 2rem;
+    padding: var(--tab-content-padding);
 }
 
 .tile-content .tab-content {
-    padding: 16px 0;
-    padding: 1.6rem 0;
+    padding: var(--tab-content-tile-padding);
 }
 
 .tab-content.tab-content-fitted {
@@ -96,7 +76,6 @@
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
-    margin: -1px;
     margin: -0.1rem;
     overflow: hidden;
     padding: 0;
