Removed harcoded values on tooltip directive

--- a/packages/recomponents/src/components/r-tabs/r-tabs.scss
+++ b/packages/recomponents/src/components/r-tabs/r-tabs.scss
@@ -10,6 +10,7 @@
     display: -webkit-flex;
     display: flex;
     flex-wrap: nowrap;
+    border-bottom: 1px solid var(--tab-divided-border-bottom-color);
 }
 
 .tab-divided {
