--- a/packages/recomponents/src/components/r-tile/r-tile.scss
+++ b/packages/recomponents/src/components/r-tile/r-tile.scss
@@ -44,7 +44,7 @@
         }
     }
 
-    & *:last-child {
+    & > *:last-child {
         border: none;
         border-radius: 0 0 var(--tile-border-radius) var(--tile-border-radius);
     }
