--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -594,4 +594,22 @@ body, .article {
     --tab-link-first-margin-left: var(--space-m);
     --tab-content-padding: 0 20px 20px 20px;
     --tab-content-tile-padding: var(--space-m) 0;
+
+    // Modal
+    // --------------------------------------------------------
+
+    --modal-overlay-background-color: rgba(80, 90, 111, .4);
+    --modal-overlay-z-index: 800;
+    --modal-overlay-padding: calc(var(--space-l) + 56) 0 var(--space-l) 0;
+    --modal-control-background-color: #FFFFFF;
+    --modal-control-z-index: 2001;
+    --modal-control-box-shadow: 0 0 0 1px rgba(107, 115, 132, 0.09), 0 25px 45px -8px rgba(80, 90, 111, 0.30), 0 3px 6px 0 rgba(80, 90, 111, 0.07);
+    --modal-control-border-radius: var(--border-radius);
+    --modal-control-width: 400px;
+    --modal-border-color: var(--gray-color-light);
+    --modal-padding: var(--space-default);
+    --modal-content-background-color: var(--background-color-light);
+    --modal-content-scrollable-max-height: 400px;
+    --modal-icon-color: #6B7384;
+    --modal-loader-background-color: var(--primary-color);
 }
