feat(r-pagination): create pagination component

--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -594,4 +594,9 @@ body, .article {
     --tab-link-first-margin-left: var(--space-m);
     --tab-content-padding: 0 20px 20px 20px;
     --tab-content-tile-padding: var(--space-m) 0;
+
+    // Pagination
+    // -----------------------------------------------------
+
+    --pagination-buttons-margin: 0 var(--space-xxs);
 }
