--- a/packages/recomponents/src/styles/helpers.scss
+++ b/packages/recomponents/src/styles/helpers.scss
@@ -5,3 +5,16 @@
     width: auto;
     flex: 0 0 auto !important;
 }
+
+.stack-xs {
+    margin: 0 0 4px 0 !important;
+}
+
+.align-items-center {
+    align-items: center !important;
+}
+
+.inline-s {
+    margin: 0 8px 0 0 !important;
+    margin: 0 0.8rem 0 0 !important;
+}
