--- a/packages/recomponents/src/components/r-button/r-button.scss
+++ b/packages/recomponents/src/components/r-button/r-button.scss
@@ -177,6 +177,64 @@
 }
 
 /**
+* Groups
+*/
+.r-button-group {
+    display: flex;
+}
+
+@media screen and (max-width: 767px) {
+    .r-button-group > .r-button {
+        flex: 1 0;
+    }
+}
+
+.r-button-group .r-button {
+    margin-left: -1px;
+    margin-left: -0.1rem;
+}
+
+.r-button-group .r-button:not(:first-child):not(:last-child),
+.r-button-group .popper:not(:first-child):not(:last-child) .r-button {
+    border-radius: 0;
+}
+
+.r-button-group .r-button:first-child,
+.r-button-group .popper:first-child .r-button {
+    border-radius: 4px 0 0 4px;
+}
+
+.r-button-group .r-button:last-child,
+.r-button-group .popper:last-child .r-button {
+    border-radius: 0 4px 4px 0;
+}
+
+.r-button-group.r-button-group-fluid > .r-button {
+    flex: 1 0;
+}
+
+.r-button-group .r-button.is-active {
+    background: #0044D4;
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #0044D4 0%, #2600d4 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0044D4), color-stop(100%, #2600d4));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #0044D4 0%, #2600d4 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #0044D4 0%, #2600d4 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #0044D4 0%, #2600d4 100%);
+    /* IE10+ */
+    background: linear-gradient(to bottom, #0044D4 0%, #2600d4 100%);
+    /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=0);
+    /* IE6-9 */
+    color: #FFFFFF;
+    box-shadow: 0 1px 2px 0 rgba(161, 178, 193, 0.8);
+}
+
+/**
 * Icons
 */
 .r-button {
