fix(r-input): keep the same with v-input

--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -463,7 +463,7 @@ body, .article {
     --input-icon-color: var(--gray-color);
     --input-has-icon-right-padding: var(--space-s) var(--space-l) var(--space-s) var(--space-m);
     --input-has-icon-left-padding: var(--space-s) var(--space-m) var(--space-s) var(--space-l);
-    --input-addon-background: var(--background-color);
+    --input-addon-background: #F9FAFB;
     --input-addon-box-shadow: 0 0 0 1px var(--gray-color) inset;
     --input-disabled-background: var(--background-color);
     --input-disabled-box-shadow: 0 0 0 1px var(--gray-color) inset;
