fix(r-input): keep the same with v-input

--- a/packages/recomponents/src/styles/helpers.scss
+++ b/packages/recomponents/src/styles/helpers.scss
@@ -25,3 +25,10 @@
 .text-muted {
     color: var(--mono-color-800) !important;
 }
+
+/**
+* Cursor Type
+*/
+.cursor-pointer {
+    cursor: pointer !important;
+}
