fix(RBadge): Add default class to RBadge

--- a/packages/recomponents/src/components/r-badge/r-badge.scss
+++ b/packages/recomponents/src/components/r-badge/r-badge.scss
@@ -17,7 +17,7 @@
     white-space: nowrap;
     box-shadow: 0 0 0 2px #FFFFFF;
 
-    &.has-icon-close {
+    &.r-badge-has-icon-close {
         padding-right: var(--space-xs);
     }
 
